Add support for Python 3.5 and Django 1.9 to tox

--- a/tox.ini
+++ b/tox.ini
@@ -1,9 +1,10 @@
 [tox]
 envlist=
   py26-django{14,15,16},
-  py27-django{14,15,16,17,18,_trunk},
-     py33-django{15,16,17,18,_trunk},
-     py34-django{15,16,17,18,_trunk}
+  py27-django{14,15,16,17,18,19,_trunk},
+     py33-django{15,16,17,18,19,_trunk},
+     py34-django{15,16,17,18,19,_trunk}
+     py35-django{15,16,17,18,19,_trunk}
 
 [testenv]
 commands=python setup.py test
@@ -14,6 +15,7 @@ deps =
   django16: Django>=1.6, <1.7
   django17: Django>=1.7, <1.8
   django18: Django>=1.8, <1.9
+  django19: Django>=1.9, <1.10
   django_trunk: https://github.com/django/django/tarball/master
   South==0.8.4
   Pillow==2.4.0
